--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,5 +23,13 @@ body{
   
 }
 
-/* these are unnecessary file */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+  -webkit-appearance: none;
+}
 
+::-webkit-calendar-picker-indicator{
+  filter: invert(1);
+}
+
+/* these are unnecessary file */
